--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -47,10 +47,27 @@ header {
 
 .header-menu {
     margin: 20px;
+    width: 50px;
+    height: 50px;
+    position: relative;
 }
 
-header x-icon {    
+.menu-box {
+    display: none;
+    height: fit-content;
+    position: absolute;
+    top: 50px;
+    margin: 0px 0px 0px -180px;
+}
+
+.header-menu x-icon[name="menu"] {    
     color: #444;
+    width: 45px;
+    height: 45px;
+}
+
+.header-menu:hover .menu-box, .menu-box:hover {
+    display: flex;
 }
 
 .status {
@@ -85,17 +102,17 @@ header x-icon {
 
 .download-section-inputs x-input {
     max-width: 100%;
-    width: 95%;
-}
-
-.download-section-inputs x-button {
-    border: none;
-    color: #676767;
+    width: 93%;
 }
 
 .download-section-button {
-    padding-left: 20px;
-    padding-right: 0;
+    border: none;
+    color: #676767;
+    margin-left: 5px;
+}
+
+.download-section-button:hover {
+    border: 1px solid #777777;
 }
 
 .filters {
@@ -109,7 +126,7 @@ header x-icon {
     width: 300px;
 
     margin: 8px;
-    padding: 12px 16px 20px 16px
+    padding: 12px 16px 24px 16px
 }
 
 .filter-top {
