--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -8,7 +8,7 @@
   --subtitle-size: 34px;
   --description-size: 24px;
   --p-size: 21px;
-  --small-size: 16px;
+  --small-size: 10px;
 
   --border-radius: 10px
 
@@ -76,17 +76,22 @@ header {
 
 
 .status {
-    width: 100%;
+    font-size: var(--small-size);
     height: 20px;
     
     margin-top: 15px;
+    margin-right: 20px;
     
     display: flex;
     justify-content: flex-end;
 }
 
+.status x-label{
+    font-size: var(--small-size);
+}
+
 .status-connection {
-    margin-right: 20px;
+    margin-left: 10px;
 }
 
 .download-section {
