--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -59,7 +59,7 @@ x-input[type="time"]{
 
 header {
     height: 100px;
-    border: 1px solid #c9c9c9;
+    /* border: 1px solid #c9c9c9; */
 
     display: flex;
     flex-direction: row;
