--- a/src/assets/styles/download.css
+++ b/src/assets/styles/download.css
@@ -1,4 +1,5 @@
 body {
+    background: #ffffff !important;
 }
 
 #gif {
@@ -9,6 +10,8 @@ body {
 
 .messages {
     width: 100%;
+    height: 100%;
+    background-color: #ffffff;
 }
 
 .messages-icon {
