--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -1,31 +1,37 @@
 * {
     box-sizing: border-box;
+    /* background-color: #ffffff; */
+    
+}
+
+body   {
+    background: #ffffff !important;
 }
 
 :root {
     /* ----- Font sizes */
-  --title-size: 40px;
-  --subtitle-size: 34px;
-  --description-size: 24px;
-  --p-size: 21px;
-  --small-size: 10px;
-
-  --border-radius: 10px
-
+    --title-size: 40px;
+    --subtitle-size: 34px;
+    --description-size: 24px;
+    --p-size: 21px;
+    --small-size: 10px;
+    
+    --border-radius: 10px;
 }
 
 #menu-dialog {
-    width: 250px;
-    height: 185px;
+    width: 245;
+    height: 180;
     top: 70px;
     left: auto;
     right: 0;
     border-radius: 10px 0 0 10px;
-    padding: 10px 10px; 
+    padding: 3px 3px; 
+    
 }
 
 #download-dialog {
-    width: 530px;
+    width: 520px;
     height: 250px;
     top: 150px;
     border-radius: 10px 10px;
@@ -86,7 +92,7 @@ header {
 }
 
 .menu-item:hover {
-    background-color: rgba(0, 0, 0, 0.10);
+    /* background-color: rgba(0, 0, 0, 0.10); */
 }
 
 
@@ -216,3 +222,16 @@ x-button:hover {
     display: flex;
 }
 
+#overlay {
+    position: fixed;
+    display: none;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.5);
+    z-index: 2;
+    cursor: pointer;
+  }
