--- a/src/assets/styles/export-preferences.css
+++ b/src/assets/styles/export-preferences.css
@@ -98,6 +98,13 @@ header x-label {
     margin-left: 15px;
 }
 
+.buttons x-button:hover {
+    cursor: pointer;
+    background-color: #0d479f;
+    color: white;
+    border: white;
+}
+
 #warnings {
     width: 90%;
     color: #FF4949;
